--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,17 +1,35 @@
 .container {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  background: url(../../../assets/background.jpg) no-repeat center fixed;
-  -webkit-background-size: cover; /* pour anciens Chrome et Safari */
-  background-size: cover; /* version standardisée */
+  color: #232B2B;
 
   .title {
-    color: white;
-    margin:0;
-    padding:50px 20px;
+    color: black;
+    margin: 0;
+    padding: 50px 20px;
   }
 
+  .textView {
+    font-size: xx-large;
+    min-height: 100px;
+    line-height: 100px;
+    margin: 10px 0;
+    background: #F3F5F6;
+
+    .word {
+      display: inline-block;
+      padding: 0;
+      margin: 0;
+    }
+    .left {
+      width: 50%;
+      text-align: right;
+    }
+    .right {
+      margin-left: -8px;
+    }
+    .accent {
+      margin-left: -8px;
+      color: #DC3D24;
+      text-decoration: underline;
+    }
+  }
 }
