--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -33,7 +33,7 @@
           class="col-5 text-center">
       <i class="fa fa-arrow-down fa-2x" aria-hidden="true"></i>
     </div>
-    <div class="col-2 text-center">{{speed}}</div>
+    <div class="col-2 text-center">Speed: {{speed}} w/m</div>
     <div (click)="changeSpeed(50)"
           class="col-5 text-center">
       <i class="fa fa-arrow-up fa-2x" aria-hidden="true"></i>
