--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,13 @@
 html, body {
   margin: 0;
   padding: 0;
+  
+  /* disable selection */
+  -moz-user-select: none; 
+  -webkit-user-select: none; 
+  -ms-user-select:none; 
+  user-select:none;
+  -o-user-select:none;
 
   height: 100%;
 }
