--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div unselectable="on" onselectstart="return false;" onmousedown="return false;" class="container">
   <div id="debug"></div>
   <h1 class="title">{{title}}</h1>
   <div class="row justify-content-center">
