add settings and themes, update versions

--- a/src/app/components/reader/reader.component.html
+++ b/src/app/components/reader/reader.component.html
@@ -1,4 +1,4 @@
-<div unselectable="on" onselectstart="return false;" onmousedown="return false;" class="container">
+<div unselectable="on" onselectstart="return false;" onmousedown="return false;" class="container" [ngClass]="getTheme()">
   <div id="debug"></div>
   <h1 class="title">{{title}}</h1>
   <div class="row justify-content-center">
